--- a/interface/package.json
+++ b/interface/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "buefy": "^0.6.5",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
