--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "eslint": "^4.19.1",
+    "execsql": "0.0.3",
     "express": "^4.16.3",
     "joi": "^13.3.0",
     "morgan": "^1.9.0",
