--- a/website/package.json
+++ b/website/package.json
@@ -17,7 +17,7 @@
     "buefy": "^0.6.5",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
-    "ip": "^1.1.5",
+    "public-ip": "^2.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
