Problems with test for show tutors

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
     "cors": "^2.8.4",
     "eslint": "^4.19.1",
     "execsql": "0.0.3",
